Fix: Updated the baseUrl for the end points to make code cleaner and reuseable

--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -83,7 +83,7 @@
             <li class="nav-item liButton">
               <a class="nav-link bg-light turnBlack" href="./FundAcct.html">
                 <div class="col-7 d-flex justify-content-between">
-                  <i class="fa fa-credit-card mt-1"></i>
+                  <i class="fa fa-money-bills"></i>
                   <p>Fund Account</p>
                 </div>
               </a>
