--- a/html/FundTran.html
+++ b/html/FundTran.html
@@ -74,7 +74,7 @@
             <li class="nav-item liButton">
               <a class="nav-link bg-light turnBlack" href="./FundAcct.html">
                 <div class="col-7 d-flex justify-content-between">
-                  <i class="fa fa-credit-card mt-1"></i>
+                  <i class="fa fa-money-bills"></i>
                   <p>Fund Account</p>
                 </div>
               </a>
@@ -109,10 +109,10 @@
         <div class="col">
           <div class="col-auto d-flex justify-content-center">
             <div class="fontColP me-2"> 
-              <i class="fa-solid fa-money-bill-trend-up"></i>
+              <i class="fa-solid fa-money-bill-transfer"></i>
             </div>
             <div class="fontColT"> 
-              TRANSFER MONEY
+              FUND TRANSFER
             </div>
           </div>
         </div>
