Feat: Add the user forgetPassword and resetPassword functionality. Add debit and credo

--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -146,7 +146,7 @@
         <div class="row p-3 testShadow pt-5">
           <div class="col-12 colourCont">
             <div class="row pb-3">
-              <div class="col-10 mt-2"><b>TRANSACTIONS</b></div>
+              <div class="col-10 mt-2"><b>DEBIT TRANSACTIONS</b></div>
             </div>
           </div>
           <div class="table-responsive mt-3">
@@ -159,6 +159,26 @@
                 </tr>
               </thead>
               <tbody id="data"></tbody>
+            </table>
+          </div>
+        </div>
+
+        <div class="row p-3 testShadow pt-5">
+          <div class="col-12 colourCont">
+            <div class="row pb-3">
+              <div class="col-10 mt-2"><b>CREDIT TRANSACTIONS</b></div>
+            </div>
+          </div>
+          <div class="table-responsive mt-3">
+            <table id="example" class="table table-striped" style="width:100%">
+              <thead>
+                <tr>
+                  <th>AMOUNT</th>
+                  <th>SENDER</th>
+                  <th>DATE</th>
+                </tr>
+              </thead>
+              <tbody id="dataCredit"></tbody>
             </table>
           </div>
         </div>
