--- a/html/UserSignUp.HTML
+++ b/html/UserSignUp.HTML
@@ -31,7 +31,7 @@
           <div class="card card-registration my-4">
             <div class="row g-0">
               <div class="col-xl-6 d-none d-xl-block">
-                <img src="../images/signup.jpg"
+                <img src="../images/Sign up-pana.svg"
                   alt="Sample photo" class="img-fluid form-img"/>
               </div>
               <form class="col-xl-6 signUpForm" id="signUpForm" 
