Fix: Add option for error message on sign up page. Feat: Add Debit and Credit transaction table on dashboard page

--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -154,7 +154,9 @@
               <thead>
                 <tr>
                   <th>AMOUNT</th>
-                  <th>DESTINATION ACCOUNT</th>
+                  <th>RECEPIENT</th>
+                  <th>RECEPIENT ACCOUNT</th>
+                  <th>STATUS</th>
                   <th>DATE</th>
                 </tr>
               </thead>
@@ -170,11 +172,13 @@
             </div>
           </div>
           <div class="table-responsive mt-3">
-            <table id="example" class="table table-striped" style="width:100%">
+            <table id="example1" class="table table-striped" style="width:100%">
               <thead>
                 <tr>
                   <th>AMOUNT</th>
                   <th>SENDER</th>
+                  <th>SENDER ACCOUNT</th>
+                  <th>STATUS</th>
                   <th>DATE</th>
                 </tr>
               </thead>
