--- a/html/UserSignUp.HTML
+++ b/html/UserSignUp.HTML
@@ -40,6 +40,7 @@
                   <b><h3 class="mb-3 text-uppercase text-center">Sign Up</h3></b>
 
                   <div class="row">
+                    <div class="form__message form__message--error" id="error_msg"></div>
                     <div class="col-md-12 mb-3">
                       <div class="form-outline">
                         <label class="form-label mt-2" for="firstName">First Name</label>
