Feat: Implement upload profile picture and display profile picture functions

--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -60,9 +60,9 @@
             </span>
             <div class="me-2 mt-2" id="dUsername">Welcome </div>
             <a href="./UserProfile.html">
-              <img src="../images/girl.jpg"
-                class="img-fluid rounded-circle mt-2"
-                alt="Profile" width="20" height="20"
+              <img id="userImageFromDB"
+                class="img-fluid rounded-circle"
+                alt="Profile" width="50" height="50"
               />
             </a>
           </div>
@@ -71,6 +71,8 @@
     </nav>
   </div>
 
+
+<!-- Notification Modal only on Dashboard for now -->
   <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -87,7 +89,7 @@
       </div>
     </div>
   </div>
-
+<!-- Notification Modal only on Dashboard for now -->
 
 
   <div class="container bg-light pb-5">
