--- a/html/FundAcct.html
+++ b/html/FundAcct.html
@@ -37,11 +37,11 @@
             <div class="col me-2 turnBell">
               <i class="fa fa-bell"></i>
             </div>
-            <div class="me-2" id="dUsername">Welcome </div>
+            <div class="me-2 mt-2" id="dUsername">Welcome </div>
             <a href="./UserProfile.html">
-              <img src="../images/girl.jpg"
+              <img id="userImageFromDB"
                 class="img-fluid rounded-circle"
-                alt="Profile" width="20" height="20"
+                alt="Profile" width="50" height="50"
               />
             </a>
           </div>
