--- a/html/FundTran.html
+++ b/html/FundTran.html
@@ -35,14 +35,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <div class="navbar-nav me-auto mb-2 mb-lg-0"></div>
           <div class="d-flex">
-            <div class="col me-2 turnBell">
-              <i class="fa fa-bell"></i>
-            </div>
-            <div class="me-2" id="dUsername">Welcome </div>
+            <span class="mt-2">
+              <button type="button" class="btn btn-danger" id="SendNotification" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                <i class="fa fa-bell turnBell"></i>
+              </button>
+              <span class="badge badge-light">0</span>
+            </span>
+            <div class="me-2 mt-2" id="dUsername">Welcome </div>
             <a href="./UserProfile.html">
-              <img src="../images/girl.jpg"
+              <img id="userImageFromDB"
                 class="img-fluid rounded-circle"
-                alt="Profile" width="20" height="20"
+                alt="Profile" width="50" height="50"
               />
             </a>
           </div>
