Feat: Prevent users from access to resetpassword page if url does not contain token

--- a/html/ResetPassword.html
+++ b/html/ResetPassword.html
@@ -109,25 +109,25 @@
     let email = params.email;
     let token = params.token;
 
-/////////////////////////// TO BE CONTINUED //////////////////
-    localStorage.setItem("resetToken", token);
-    const resetTokeN = localStorage.getItem("resetToken");
+    const urlNotContainToken = window.location.search.length === 0;
 
-    if (resetTokeN == null) {
-      // Swal.fire({
-      // icon: 'error',
-      // title: 'No authorization',
-      // // text: 'No autourization',
-      // footer: '<a href="http://127.0.0.1:5500/html/ForgetPassword.html">Did you forget your password?</a>'
-      // })
-      prompt("hhhh");
+    if (urlNotContainToken) {
+      Swal.fire({
+      icon: 'error',
+      title: 'No authorization',
+      // text: 'No autourization',
+      footer: '<a href="http://127.0.0.1:5500/html/ForgetPassword.html">Did you forget your password?</a>'
+      })
+      setTimeout(
+      function () {
+        window.location.replace(`http://127.0.0.1:5500/html/ForgetPassword.html`);
+      },4000
+    );
     }
-///////////////////////////////////////////////////////
-
 
     // Set Input Field For Email and Token
     document.getElementById("emailReset").value = email;
-    document.getElementById("tokenReset"). value = token
+    document.getElementById("tokenReset").value = token
 
     function sendResetPasswordData() {
     var resetPasswordData = {};
